<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="24dp">

    <LinearLayout
        android:id="@+id/linear_layout_start_period"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/start_period"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:hint="@string/start_period"
            android:importantForAutofill="no"
            android:inputType="number" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/seconds" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_layout_ping_period"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/linear_layout_start_period"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/ping_period"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:hint="@string/ping_period"
            android:importantForAutofill="no"
            android:inputType="number" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/seconds" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_layout_rest_period"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/linear_layout_ping_period"
        android:orientation="horizontal"
        android:visibility="invisible">

        <EditText
            android:id="@+id/rest_period"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:hint="@string/rest_period"
            android:importantForAutofill="no"
            android:inputType="number" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/seconds" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_layout_dual_period"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/linear_layout_rest_period"
        android:orientation="horizontal"
        android:visibility="invisible">

        <EditText
            android:id="@+id/dual_period"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:hint="@string/dual_period"
            android:importantForAutofill="no"
            android:inputType="number" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/seconds" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_layout_continuous_mode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/linear_layout_dual_period">

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/continuous_mode_switch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/continuous" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_layout_dual_mode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/linear_layout_continuous_mode">

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/dual_mode_switch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dual_mode" />

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/buttons_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/linear_layout_dual_mode">

        <ImageButton
            android:id="@+id/play_pause_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:background="@color/white"
            android:contentDescription="@string/play"
            android:src="@drawable/baseline_play_circle_outline_150"
            android:tag="@drawable/baseline_play_circle_outline_150" />

        <TextView
            android:id="@+id/status_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/play_pause_button"
            android:gravity="center"
            android:text="" />

        <ImageButton
            android:id="@+id/stop_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/status_text"
            android:layout_centerHorizontal="true"
            android:background="@color/white"
            android:visibility="invisible"
            android:contentDescription="@string/stop"
            android:src="@drawable/baseline_check_box_outline_blank_100"
            android:tag="@drawable/baseline_check_box_outline_blank_100" />

    </RelativeLayout>

</RelativeLayout>